Refactored the navbar to allow it to collapse, Fixed bug with footer

--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ body {
 }
 
 footer {
-	position: fixed;
+	position: absolute;
 	bottom: 2em;
 	width: 100%;
 	text-align: center;
